--- a/website/styleAM.css
+++ b/website/styleAM.css
@@ -154,3 +154,8 @@ canvas {
   font-size: 20px;
   color: rgb(255, 112, 166);
 }
+#morePics {
+  position: relative;
+  top: 920px;
+  left: 5px;
+}
