--- a/website/aboutMe/styleAM.css
+++ b/website/aboutMe/styleAM.css
@@ -5,184 +5,11 @@ html, body {
 canvas {
   display: block;
 }
+#seniorPortrait {
+  text-align: center;
+  background-color: pink;
+}
 #selfPortrait {
-  /* position: absolute; */
-  border-radius: 20px;
-  border: 6px solid rgb(22, 227, 167);
-  left: 5px;
-  top: 5px;
-  animation: borderChange 5s infinite;
-}
-#selfPortraitLabel {
-  position: absolute;
-  font-size: 20px;
-  border: 2px solid rgb(95, 63, 153);
-  color: rgb(255, 105, 51);
-  left: 184px;
-  top: 760px;
-}
-#myName {
-  color: rgb(0, 0, 0);
-  text-shadow: 2px 2px rgb(22, 227, 167);
-}
-/* @keyframes animationname {keyframes-selector {css-styles;}} */
-/* https://www.w3schools.com/cssref/css3_pr_animation-keyframes.asp */
-@keyframes borderChange {
-  50% {border-color: rgb(95, 63, 153);}
-}
-/* makes border bulge in and out */
-@keyframes borderChange2 {
-  50% {border: 6px solid rgb(95, 63, 153);}
-}
-#intro {
-  display: inline;
   position: relative;
-  top: -10px;
-  left: 525px;
-}
-#headerIntro {
-  font-size: 30px;
-  color: rgb(255, 105, 51);
-}
-#p1 {
-  font-size: 23px;
-  color: rgb(255, 112, 166);
-}
-#hr1 {
-  border: none;
-  border-top: 5px double;
-  color: rgb(95, 63, 153);
-  overflow: visible;
-  text-align: center;
-  height: 5px;
-}
-
-#hr1:after {
-  background: #fff;
-  content: '§' ;
-  padding: 0 4px;
-  position: relative;
-  top: -13px;
-}
-#hr2 {
-  border: none;
-  border-top: 5px double;
-  color: rgb(95, 63, 153);
-  overflow: visible;
-  text-align: center;
-  height: 5px;
-}
-
-#hr2:after {
-  background: #fff;
-  content: '§' ;
-  padding: 0 4px;
-  position: relative;
-  top: -13px;
-}
-#p2 {
-  font-size: 23px;
-  color: rgb(0, 206, 241);
-}
-#dogs {
-  border-radius: 20px;
-  border: 6px solid rgb(22, 227, 167);
-  animation: borderChange 5s infinite;
-}
-#hr3 {
-  border: none;
-  border-top: 5px double;
-  color: rgb(95, 63, 153);
-  overflow: visible;
-  text-align: center;
-  height: 5px;
-}
-#hr3:after {
-  background: #fff;
-  content: '§' ;
-  padding: 0 4px;
-  position: relative;
-  top: -13px;
-}
-#doggyP {
-  position: relative;
-  left: 520px;
-  top: -500px;
-  font-size: 23px;
-  color: rgb(255, 112, 166);
-}
-#funFacts {
-  position: relative;
-  top: -100px;
-}
-#hr4 {
-  border: none;
-  border-top: 5px double;
-  color: rgb(95, 63, 153);
-  overflow: visible;
-  text-align: center;
-  height: 5px;
-}
-#hr4:after {
-  background: #fff;
-  content: '§' ;
-  padding: 0 4px;
-  position: relative;
-  top: -13px;
-}
-#conciseDescriptHeader {
-  text-align: center;
-  /* position: relative;
-  left: 6px; */
-  font-size: 27px;
-  color: rgb(0, 0, 0);
-  text-shadow: 2px 2px rgb(22, 227, 167);
-}
-#numbering {
-  color: rgb(255, 105, 51);
-  font-family: humanoidFont;
-  font-size: 40px;
-}
-@font-face {
-  font-family: humanoidFont;
-  src: url(assets/humanoidFont/HUMANOIDSTRAIGHT.TTF);
-}
-#conciseDescript {
-  display: inline-flex;
-  border-radius: 20px;
-  border: 6px solid rgb(22, 227, 167);
-  animation: borderChange 5s infinite;
-  position: relative;
-  top: -13px;
-}
-#facts {
-  font-size: 20px;
-  color: rgb(255, 112, 166);
-  position: relative;
-  left: -10px;
-  border-radius: 20px;
-  border: 6px solid rgb(22, 227, 167);
-  animation: borderChange 5s infinite;
-}
-#bros {
-  border-radius: 20px;
-  border: 6px solid rgb(22, 227, 167);
-  animation: borderChange 5s infinite;
-  position: relative;
-  top: -13px;
-}
-#broDescript {
-  display: inline-block;
-  position: relative;
-  font-size: 20px;
-  border: 2px solid rgb(95, 63, 153);
-  color: rgb(255, 105, 51);
-  left: -515px;
-  top: 20px;
-}
-#parents {
-  display: inline-block;
-  border-radius: 20px;
-  border: 6px solid rgb(22, 227, 167);
-  animation: borderChange 5s infinite;
+  top: 10px;
 }
