--- a/website/aboutMe/styleAM.css
+++ b/website/aboutMe/styleAM.css
@@ -7,7 +7,7 @@ canvas {
 }
 #seniorPortrait {
   text-align: center;
-  background-color: pink;
+  background-image: url('https://wsprung.github.io/whitneysArchive/website/assets/chinaPhoto.jpeg');
 }
 #selfPortrait {
   position: relative;
