Adds stuffed animal photo

--- a/website/aboutMe/styleAM.css
+++ b/website/aboutMe/styleAM.css
@@ -108,3 +108,8 @@ canvas {
 #conciseDescriptHeader {
   color: darkblue;
 }
+#morePics {
+  position: relative;
+  left: 10px;
+  display: inline-flex;
+}
