--- a/website/aboutMe/styleAM.css
+++ b/website/aboutMe/styleAM.css
@@ -128,6 +128,8 @@ canvas {
   animation: borderChange 5s infinite;
 }
 #slideshowButtons {
+  position: relative;
+  top: 10px;
   display: inline-flex;
   display: flex;
   flex-wrap: wrap;
@@ -157,10 +159,6 @@ canvas {
   border: 6px solid rgb(22, 227, 167);
   animation: borderChange 5s infinite;
 }
-#fix {
-  position: relative;
-  top: 10px;
-}
 #roomPic {
   position: relative;
   display: none;
@@ -170,4 +168,14 @@ canvas {
 #imageDescript {
   font-size: 20px;
   background-color: white;
+}
+#peruDescript {
+  position: relative;
+  top: -20px;
+  color: white;
+  font-size: 15px;
+  text-align: right;
+  background-color: rgb(95, 63, 153);
+  border: 6px solid rgb(22, 227, 167);
+  animation: borderChange 5s infinite;
 }
