--- a/website/myWork/style.css
+++ b/website/myWork/style.css
@@ -1,7 +1,112 @@
+
 html, body {
   margin: 0;
   padding: 0;
+  font-family:'Roboto', sans-serif;
+  background-color: rgb(255, 255, 255);
 }
+
 canvas {
   display: block;
+  z-index: -1;
+}
+#repoLink {
+  position: relative;
+  top: 20px;
+  background-color: rgb(121, 250, 197);
+  border: 5px solid hotpink;
+}
+#myName {
+  background-color: rgb(121, 250, 197);
+  border: 7px solid hotpink;
+  color: black;
+  font-family: stereofidelic;
+  font-size: 50px;
+}
+#defaultCanvas0 {
+  display: block;
+  z-index: -1;
+
+}
+a:link {
+  display: inline-block;
+  padding: 3px;
+  text-decoration:none !important;
+  color: black;
+  font-size: medium;
+  text-align: center;
+  border-bottom: none;
+}
+
+a:hover {
+  background-color: rgb(121, 250, 197);
+}
+
+img {
+  border: 10px solid rgb(22, 227, 167);
+  animation: borderChange 5s infinite;
+}
+
+h1{
+  color: black;
+     position: absolute;
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
+     text-align: center;
+     top: 0%;
+}
+
+p{
+    position: absolute;
+    font-size: 0.875em;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    text-align:center;
+    top: 5%;
+}
+
+table{
+  position: absolute;
+  z-index: 1;
+  width:100%;
+  top: 10%;
+
+}
+
+td {
+    width: 33vw;
+    height: 33vw;
+    vertical-align: baseline;
+    padding-top:10px;
+    text-align:center;
+
+    &:after, &:before {
+        content: '';
+
+        display: block;
+        padding-bottom: calc(50% - 0.5em);
+    }
+}
+
+.container{
+  position: relative;
+}
+
+.project {
+  position: absolute;
+  width:50%;
+  float: left;
+
+  left: 0px;
+  top: 0px;
+  z-index: 1;
+}
+
+@font-face {
+  font-family: stereofidelic;
+  src: url(assets/stereofidelic/stereofidelic.ttf);
+}
+
+@keyframes borderChange {
+  50% {border-color: rgb(95, 63, 153);}
 }
