Fixes back buttons on reflections

--- a/website/myWork/style.css
+++ b/website/myWork/style.css
@@ -10,6 +10,19 @@ canvas {
   display: block;
   z-index: -1;
 }
+#backButton {
+  color: white;
+  font-size: 15px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 20px;
+  font-family: verdana;
+  font-style: italic;
+  background-color: rgb(95, 63, 153);
+  border: 6px solid rgb(22, 227, 167);
+  animation: borderChange 5s infinite;
+}
 #repoLink {
   position: relative;
   top: 20px;
