--- a/website/style.css
+++ b/website/style.css
@@ -7,7 +7,7 @@ canvas {
 }
 #buttons {
   background-color: rgb(121, 250, 197);
-  visibility: hidden;
+  visibility: visible;
   text-align: center;
 }
 #buttonDesign {
