--- a/website/myAccolades/style.css
+++ b/website/myAccolades/style.css
@@ -6,10 +6,19 @@ canvas {
   display: block;
   overflow: hidden;
 }
-#table {
+#row1 {
   position: absolute;
-  top: 80px;
+  top: -67px;
   /* justify-content: space-around; figure this out */
+}
+#articleIcon {
+  position: relative;
+  top: 65px;
+  left: 40px;
+}
+#flowerIcon {
+  position: relative;
+  top: 14px;
 }
 /* {
 	display: flex;
