--- a/website/myAccolades/style.css
+++ b/website/myAccolades/style.css
@@ -18,7 +18,14 @@ canvas {
 }
 #articleIcon {
   position: relative;
-  top: 20px;
+  top: 65px;
+  left: 50px;
+}
+#nmsDescript {
+  /* visibility: collapse; */
+  display: hidden;
+  position: relative;
+  top: 65px;
   left: 50px;
 }
 #articleIconLight {
