Creates hover effect for carolyn's care article

--- a/website/myAccolades/style.css
+++ b/website/myAccolades/style.css
@@ -24,15 +24,15 @@ canvas {
   top: 65px;
   left: 50px;
 }
-/* #ccDescript {
-  display: hidden;
+#ccDescript {
+  /* display: hidden; */
   position: relative;
   top: 65px;
   left: 50px;
-} */
+}
 #nmsDescript {
   /* visibility: collapse; */
-  display: hidden;
+  /* display: hidden; */
   position: relative;
   top: 65px;
   left: 50px;
