--- a/website/myAccolades/style.css
+++ b/website/myAccolades/style.css
@@ -34,6 +34,9 @@ canvas {
   position: relative;
   top: 76px;
 }
+#reportCardExcerpt {
+  display: none;
+}
 @keyframes borderChange {
   50% {border-color: rgb(95, 63, 153);}
 }
