--- a/website/aboutMe/styleAM.css
+++ b/website/aboutMe/styleAM.css
@@ -75,6 +75,19 @@ canvas {
   color: darkblue;
   text-shadow: 2px 2px rgb(22, 227, 167);
 }
+#reportCard {
+  border-radius: 10px;
+  font-size: 20px !important;
+  color: hotpink !important;
+  font-weight: bold;
+  font-style: oblique;
+  background-color: rgb(22, 227, 167);
+}
+#zhuExcerpt {
+  border-radius: 20px;
+  background-color: rgb(95, 63, 153);
+  color: rgb(22, 227, 167);
+}
 #hr1 {
   border: none;
   border-top: 5px double;
